[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/projet jeu  copy/spikes.png" type="Texture" id=1]
[ext_resource path="res://src/pers/opps.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/Randomize7.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36, 18 )

[node name="Opps" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="opps" type="Sprite" parent="."]
position = Vector2( 37.6844, -46.3705 )
scale = Vector2( 1.00719, 1.25 )
texture = ExtResource( 1 )
offset = Vector2( 2.07047, 11.4964 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 40, -9 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
modulate = Color( 1, 0.631373, 0, 1 )
position = Vector2( 18, 0 )
scale = Vector2( 0.4, 0.8 )
rect = Rect2( -40, -10, 20, 20 )
process_parent = true
physics_process_parent = true

[node name="KillZone" type="Area2D" parent="."]
position = Vector2( 40, 8 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
modulate = Color( 0.27451, 0.0431373, 1, 1 )
position = Vector2( 0, -17 )
shape = SubResource( 2 )

[node name="audioPlayer" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="audioPlayer"]
stream = ExtResource( 3 )
volume_db = -3.517
[connection signal="tree_entered" from="CollisionShape2D" to="." method="_on_CollisionShape2D_tree_entered"]
[connection signal="body_entered" from="KillZone" to="." method="_on_KillZone_body_entered"]
